--- a/ict.htm
+++ b/ict.htm
@@ -86,9 +86,16 @@ function clickSwapImg() {}
 		yapar. Ama her insan matematikteki güzelliği, estetiği anlayamaz çünkü matematik bilmediği 
 		için ondan bir yerde yoksundur. Bence o bir kayıp...</font></b></p>
 		<p class="MsoNormal" align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
-		<i><font color="#0000CC">*1 Nesin Matematik / Sanat / Felsefe Köyü Kurucusu ve Yöneticisi <br>
-		*2 TÜBİTAK Eski
-		Başkanı.</font></i></p>
+		<i><font color="#0000CC"><style>
+			a {
+				text-decoration: none;
+			}
+		</style>
+			<a href="https://nesinkoyleri.org/"><span>
+				*1- Nesin Matematik / Sanat / Felsefe Köyü Kurucusu ve Yöneticisi</span></a><br>
+			<a href="http://memoriam.metu.edu.tr/prof-dr-tosun-terzioglu/"><span>
+				*2- TÜBİTAK Eski Başkanı</span></a>
+			</font></i></p>
 		<p align="center">&nbsp;<p align="center">
 		<a href="#i" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Başa Dön</span></a><p>&nbsp;</td>
