--- a/sgdnsy.htm
+++ b/sgdnsy.htm
@@ -49,23 +49,22 @@ function clickSwapImg() {}
 		2'yi bildiler. Gerçekten 
 		de 1 ve 2'nin diğer sayılardan farklı bir yeri ve önemi olduğunu 
 		görüyoruz. Belki de en ilginç 
-		örnek Sümer tarihinden geliyor. Sümerce'de 1 ve 2 ile &quot;kadın&quot; ve &quot;erkek&quot; 
-		aynı sembollerle
-		gösteriliyor. Hatta 1 ve 2'nin &quot;ben&quot; ve &quot;sen&quot; demek olduğu toplumlar da 
-		var. Üç sayısı ise 1 ve 2'den çok 
-		sonra bulunuyor ve önemli bir çokluk belirttiği için kelimenin anlamı 
-		tamamen değişiyor. En güzel 
-		örneği de eski Çin ideogramlarında. Anlamı &quot;erkek&quot; olan şekilden üç tane 
-		olunca anlam &quot;herkes&quot;, 
-		&quot;ağaç&quot; anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;, &quot;kadın&quot; demek 
-		olan 
-		ideogramdan üç tane olduğu zaman da anlam &quot;dedikodu&quot; olarak değişiyor. 
-		Eski Mısır
-		hiyerogliflerinde &quot;cennet&quot; anlamına gelen sürahiden üç tane olduğu zaman 
-		anlam &quot;sel&quot; olarak değişiyor. 
-		&quot;Dalga&quot; anlamına gelen şekilden üç tane olursa &quot;su&quot; anlamına geliyor. 
-		&quot;Bitki&quot; demek olan 
-		işaretten üç tane olursa da anlam &quot;bitkiler&quot; oluyor.</b></font></p>
+		örnek Sümer tarihinden geliyor.
+			<li>Sümerce'de 1 ve 2 ile &quot;kadın&quot; ve &quot;erkek&quot;aynı sembollerle gösteriliyor. Hatta 1 ve 2'nin &quot;ben&quot; ve &quot;sen&quot; demek olduğu toplumlar da
+				var. </li><br>
+			<li>Üç sayısı ise 1 ve 2'den çok
+				sonra bulunuyor ve önemli bir çokluk belirttiği için kelimenin anlamı
+				tamamen değişiyor. </li><br>
+			<li>En güzel
+				örneği de eski Çin ideogramlarında. Anlamı &quot;erkek&quot; olan şekilden üç tane
+				olunca anlam &quot;herkes&quot;; "ağaç&quot; anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;; &quot;kadın&quot; demek
+				olan ideogramdan üç tane olduğu zaman da anlam &quot;dedikodu&quot; olarak değişiyor.</li><br>
+			<li>Eski Mısır hiyerogliflerinde &quot;cennet&quot; anlamına gelen sürahiden üç tane olduğu zaman
+				anlam &quot;sel&quot; olarak değişiyor. </li><br>
+			<li>&quot;Dalga&quot; anlamına gelen şekilden üç tane olursa &quot;su&quot; anlamına geliyor.
+				&quot;Bitki&quot; demek olan işaretten üç tane olursa da anlam &quot;bitkiler&quot; oluyor.</li>
+
+		</b></font></p>
 		<p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
