--- a/sgdnsy.htm
+++ b/sgdnsy.htm
@@ -45,22 +45,20 @@ function clickSwapImg() {}
 		bugün bilgisayar teknolojisinin temelini oluşturuyor.</b></font></p>
 		<p class="MsoNormal" align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
 		<font color="#0000CC"><b>Sayı 
-		sistemi oluşmaya başladığında insanlar çok uzun bir süre sadece 1 ve 
-		2'yi bildiler. Gerçekten 
-		de 1 ve 2'nin diğer sayılardan farklı bir yeri ve önemi olduğunu 
-		görüyoruz. Belki de en ilginç 
+		sistemi oluşmaya başladığında insanlar çok uzun bir süre sadece 1 ve 2'yi bildiler. Gerçekten
+		de 1 ve 2'nin diğer sayılardan farklı bir yeri ve önemi olduğunu görüyoruz. Belki de en ilginç
 		örnek Sümer tarihinden geliyor.
 			<li>Sümerce'de 1 ve 2 ile &quot;kadın&quot; ve &quot;erkek&quot;aynı sembollerle gösteriliyor. Hatta 1 ve 2'nin &quot;ben&quot; ve &quot;sen&quot; demek olduğu toplumlar da
-				var. </li><br>
+				var. </li><br><br>
 			<li>Üç sayısı ise 1 ve 2'den çok
 				sonra bulunuyor ve önemli bir çokluk belirttiği için kelimenin anlamı
-				tamamen değişiyor. </li><br>
+				tamamen değişiyor. </li><br><br>
 			<li>En güzel
 				örneği de eski Çin ideogramlarında. Anlamı &quot;erkek&quot; olan şekilden üç tane
 				olunca anlam &quot;herkes&quot;; "ağaç&quot; anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;; &quot;kadın&quot; demek
-				olan ideogramdan üç tane olduğu zaman da anlam &quot;dedikodu&quot; olarak değişiyor.</li><br>
+				olan ideogramdan üç tane olduğu zaman da anlam &quot;dedikodu&quot; olarak değişiyor.</li><br><br>
 			<li>Eski Mısır hiyerogliflerinde &quot;cennet&quot; anlamına gelen sürahiden üç tane olduğu zaman
-				anlam &quot;sel&quot; olarak değişiyor. </li><br>
+				anlam &quot;sel&quot; olarak değişiyor. </li><br><br>
 			<li>&quot;Dalga&quot; anlamına gelen şekilden üç tane olursa &quot;su&quot; anlamına geliyor.
 				&quot;Bitki&quot; demek olan işaretten üç tane olursa da anlam &quot;bitkiler&quot; oluyor.</li>
 
