--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <title>Ana Sayfa</title>
 <script language="JavaScript" fptype="dynamicanimation">
-<!--
+
 function dynAnimation() {}
 function clickSwapImg() {}
-//-->
+
 </script>
 <script language="JavaScript1.2" fptype="dynamicanimation" src="file:///C:/Program%20Files/Microsoft%20Office/OFFICE11/fpclass/animate.js">
 </script>
@@ -45,6 +45,11 @@ function clickSwapImg() {}
 		<p align="center">&nbsp;</td>
 	</tr>
 	<tr>
+		<style>
+			a {
+				text-decoration: none;
+			}
+		</style>
 		<td width="226" bgcolor="#FFFF66" align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
 		<a href="index.htm"><span style="text-decoration: none">Ana Sayfa</span></a></b></p>
