--- a/sgdnsy.htm
+++ b/sgdnsy.htm
@@ -16,6 +16,11 @@ function clickSwapImg() {}
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
+<style>
+	a {
+		text-decoration: none;
+	}
+</style>
 
 <table border="0" width="90%" cellspacing="7" id="table1">
 	<tr>
@@ -47,7 +52,8 @@ function clickSwapImg() {}
 		<font color="#0000CC"><b>Sayı 
 		sistemi oluşmaya başladığında insanlar çok uzun bir süre sadece 1 ve 2'yi bildiler. Gerçekten
 		de 1 ve 2'nin diğer sayılardan farklı bir yeri ve önemi olduğunu görüyoruz. Belki de en ilginç
-		örnek Sümer tarihinden geliyor.
+		örnek Sümer tarihinden geliyor:
+			<br>
 			<li>Sümerce'de 1 ve 2 ile &quot;kadın&quot; ve &quot;erkek&quot;aynı sembollerle gösteriliyor. Hatta 1 ve 2'nin &quot;ben&quot; ve &quot;sen&quot; demek olduğu toplumlar da
 				var. </li><br><br>
 			<li>Üç sayısı ise 1 ve 2'den çok
@@ -62,8 +68,9 @@ function clickSwapImg() {}
 			<li>&quot;Dalga&quot; anlamına gelen şekilden üç tane olursa &quot;su&quot; anlamına geliyor.
 				&quot;Bitki&quot; demek olan işaretten üç tane olursa da anlam &quot;bitkiler&quot; oluyor.</li>
 
-		</b></font></p>
-		<p>&nbsp;</td>
+		</b></font></p><br><br><p align="center"><span style="text-decoration: none">
+		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" href="sgdnsy.htm">
+		<span style="text-decoration: none"><b>Başa Dön</b></span></a></span><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
