--- a/ckltsi.htm
+++ b/ckltsi.htm
@@ -16,7 +16,11 @@ function clickSwapImg() {}
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
-
+<style>
+	a {
+		text-decoration: none;
+	}
+</style>
 <table border="0" width="90%" cellspacing="7" id="table1">
 	<tr>
 		<td width="111" rowspan="12">&nbsp;</td>
@@ -65,7 +69,7 @@ function clickSwapImg() {}
 		torunlarımız birbirlerine rahatça anlatabilecekler...<br>
 &nbsp;</span></b></font><p align="center"><span style="text-decoration: none">
 		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" href="#c">
-		<span style="text-decoration: none">Başa Dön</span></a></span><p>&nbsp;</td>
+		<span style="text-decoration: none"><b>Başa Dön</b></span></a></span><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
