--- a/ict.htm
+++ b/ict.htm
@@ -98,7 +98,7 @@ function clickSwapImg() {}
 			</font></i></p>
 		<p align="center">&nbsp;<p align="center">
 		<a href="#i" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
-		<span style="text-decoration: none">Başa Dön</span></a><p>&nbsp;</td>
+		<span style="text-decoration: none"><b>Başa Dön</b></span></a><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
