--- a/sfr.htm
+++ b/sfr.htm
@@ -16,7 +16,11 @@ function clickSwapImg() {}
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
-
+<style>
+	a {
+		text-decoration: none;
+	}
+</style>
 <table border="0" width="90%" cellspacing="7" id="table1">
 	<tr>
 		<td width="111" rowspan="12">&nbsp;</td>
