"Discovering Geometry" link is set. Bugs are fixed.

--- a/3.htm
+++ b/3.htm
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <title>Welcome to Discovering Geometry</title>
@@ -67,7 +68,7 @@ segment, using only a compass and straightedge. </font></b></p>
 		</td>
 		<td align="center" width="107">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30° angle 
+		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30Â° angle 
 		</span></a></b></p>
 		</td>
 	</tr>
@@ -76,7 +77,7 @@ segment, using only a compass and straightedge. </font></b></p>
 	<tr>
 		<td align="center" valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60° angle 
+		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60Â° angle 
 		</span></a></b></p>
 		</td>
 		<td align="center" width="174" valign="top">
