--- a/1.htm
+++ b/1.htm
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <title>Welcome to Discovering Geometry</title>
@@ -73,7 +74,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="4.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
-		<span style="text-decoration: none">Constructing a 30° angle </span></a>
+		<span style="text-decoration: none">Constructing a 30Â° angle </span></a>
 		</b> </td>
 	</tr>
 	</table>
@@ -83,7 +84,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="5.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
-		<span style="text-decoration: none">Constructing a 60° angle </span></a>
+		<span style="text-decoration: none">Constructing a 60Â° angle </span></a>
 		</b> </td>
 		<td align="center" width="181" valign="top">
 		<p style="margin-top: 6px; margin-bottom: 12px">
