--- a/4.htm
+++ b/4.htm
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <title>Welcome to Discovering Geometry</title>
@@ -37,13 +38,13 @@ function clickSwapImg() {}
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
-		<font size="4" color="#000099"><b>Constructing a 30° Angle </b></font></td>
+		<font size="4" color="#000099"><b>Constructing a 30Â° Angle </b></font></td>
 	</tr>
 </table>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
 <p style="margin-top: 6px; margin-bottom: 12px"><font color="#0000FF"><b>This 
 </b></font><span style="FONT-WEIGHT: 700; FONT-FAMILY: Times New Roman">
-<font color="#0000ff">demonstration </font></span><font color="#0000FF"><b>shows how to construct a 30° angle from scratch using a compass and 
+<font color="#0000ff">demonstration </font></span><font color="#0000FF"><b>shows how to construct a 30Â° angle from scratch using a compass and 
 straightedge. </b></font></p>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
 <table border="0" width="900" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
@@ -67,7 +68,7 @@ straightedge. </b></font></p>
 		</td>
 		<td align="center" width="107">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30° angle 
+		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30Â° angle 
 		</span></a></b></p>
 		</td>
 	</tr>
@@ -76,7 +77,7 @@ straightedge. </b></font></p>
 	<tr>
 		<td align="center" valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60° angle 
+		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60Â° angle 
 		</span></a></b></p>
 		</td>
 		<td align="center" width="164" valign="top">
@@ -210,7 +211,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px">
 		<font color="#0000FF" size="2" face="Arial">Done. The angle DAC has a 
-		measure of 30°</font></td>
+		measure of 30Â°</font></td>
 	</tr>
 </table>
 
