--- a/sgdnsy.htm
+++ b/sgdnsy.htm
@@ -54,19 +54,22 @@ function clickSwapImg() {}
 		de 1 ve 2'nin diğer sayılardan farklı bir yeri ve önemi olduğunu görüyoruz. Belki de en ilginç
 		örnek Sümer tarihinden geliyor:
 			<br>
-			<li>Sümerce'de 1 ve 2 ile &quot;kadın&quot; ve &quot;erkek&quot;aynı sembollerle gösteriliyor. Hatta 1 ve 2'nin &quot;ben&quot; ve &quot;sen&quot; demek olduğu toplumlar da
+			<li>Sümerce'de 1 ve 2 ile &quot;kadın&quot; ve &quot;erkek&quot;aynı sembollerle gösteriliyor. Hatta 1 ve 2'nin &quot;ben&quot; ve &quot;sen&quot; demek olduğu
+				<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;toplumlar da
 				var. </li><br><br>
 			<li>Üç sayısı ise 1 ve 2'den çok
 				sonra bulunuyor ve önemli bir çokluk belirttiği için kelimenin anlamı
 				tamamen değişiyor. </li><br><br>
 			<li>En güzel
 				örneği de eski Çin ideogramlarında. Anlamı &quot;erkek&quot; olan şekilden üç tane
-				olunca anlam &quot;herkes&quot;; "ağaç&quot; anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;; &quot;kadın&quot; demek
-				olan ideogramdan üç tane olduğu zaman da anlam &quot;dedikodu&quot; olarak değişiyor.</li><br><br>
+				olunca anlam &quot;herkes&quot;; "ağaç&quot;
+				<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;anlamındaki şekilden üç tane varsa anlam &quot;orman&quot;; &quot;kadın&quot; demek
+				olan ideogramdan üç tane olduğu zaman da anlam
+				<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&quot;dedikodu&quot; olarak değişiyor.</li><br><br>
 			<li>Eski Mısır hiyerogliflerinde &quot;cennet&quot; anlamına gelen sürahiden üç tane olduğu zaman
 				anlam &quot;sel&quot; olarak değişiyor. </li><br><br>
 			<li>&quot;Dalga&quot; anlamına gelen şekilden üç tane olursa &quot;su&quot; anlamına geliyor.
-				&quot;Bitki&quot; demek olan işaretten üç tane olursa da anlam &quot;bitkiler&quot; oluyor.</li>
+				&quot;Bitki&quot; demek olan işaretten üç tane olursa da <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;anlam &quot;bitkiler&quot; oluyor.</li>
 
 		</b></font></p><br><br><p align="center"><span style="text-decoration: none">
 		<a dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" href="sgdnsy.htm">
