New features have been added

--- a/ckltsi.htm
+++ b/ckltsi.htm
@@ -44,7 +44,9 @@ function clickSwapImg() {}
 		hesap tekniğine Latince &quot;<i>çakıl 
 		taşı</i>&quot; anlamında &quot;<i>calculus</i>&quot; dendi. Türkçede de biz bu hesap 
 		tekniğine &quot;<i>yüksek matematik</i>&quot; ya 
-		da &quot;<i>analiz</i>&quot; diyoruz.Yüksek matematiğin 
+		da &quot;<i>analiz</i>&quot; diyoruz.
+
+			<br><br>Yüksek matematiğin
 		ruhunu, ana fikrini size kısaca anlatabilirim. Anlatabilirim çünkü 
 		aradan 300 yıl geçti. Bizim bu 
 		fikirleri hazmetmemiz için yeteri kadar zaman vardı. Yüksek matematik 
@@ -54,7 +56,8 @@ function clickSwapImg() {}
 		an iniyor. Demek ki uçağın en yüksek noktası yükselişle alçalış arasında, ne yükselişin ne 
 		de alçalışın olduğu bir yerde. Biz buna teknik olarak &quot;bir fonksiyonun
 		türevini alıp sıfıra 
-		eşitlemek&quot; diyoruz. Bakın size bu kadar teknik bir şeyi gayet rahat 
+		eşitlemek&quot; diyoruz.
+			<br><br>Bakın size bu kadar teknik bir şeyi gayet rahat
 		anlattım. Çünkü 300 yıldır bu 
 		fikirlerin içindeyiz. Oysa 300 yıl önce bu fikirler üniversitede sadece
 		başkalarının &quot;çatlak&quot; dediği 
