--- a/ict.htm
+++ b/ict.htm
@@ -92,10 +92,10 @@ function clickSwapImg() {}
 				text-decoration: none;
 			}
 		</style>
-			<a href="https://nesinkoyleri.org/"><span>
-				*1- Nesin Matematik / Sanat / Felsefe Köyü Kurucusu ve Yöneticisi</span></a><br>
-			<a href="http://memoriam.metu.edu.tr/prof-dr-tosun-terzioglu/"><span>
-				*2- TÜBİTAK Eski Başkanı</span></a>
+			<a href="https://nesinkoyleri.org/"><span><b>
+				*1- Nesin Matematik / Sanat / Felsefe Köyü Kurucusu ve Yöneticisi</b></span></a><br>
+			<a href="http://memoriam.metu.edu.tr/prof-dr-tosun-terzioglu/"><span><b>
+				*2- TÜBİTAK Eski Başkanı</b></span></a>
 			</font></i></p>
 		<p align="center">&nbsp;<p align="center">
 		<a href="#i" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
