--- a/krl.htm
+++ b/krl.htm
@@ -57,7 +57,7 @@ function clickSwapImg() {}
 		dinlenebilir. O diğer 
 		insanların rağbet et­tikleri küçük rahatlıklara değil, sayılar ve matema<span style="background-color: #FFFFFF; background-position: 0% 0%">tik 
 		dünyasının 
-		içindeki sırların verdiği rahatlıklara, huzurlara doğru koştu.<br>
+		içindeki sırların verdiği rahatlıklara, huzurlara doğru koştu.<br><br>
 		En büyük matematikçi olarak tarihe geçmek , herkese nasip değil. Ama 
 		yine de matematik bilerek
 		yaşamaktan çeşitli yararlar umabiliriz.<br>
