New features have been added

--- a/ict.htm
+++ b/ict.htm
@@ -56,7 +56,7 @@ function clickSwapImg() {}
 		yıl bir kat daha yukarı çıkıyoruz. Geçen yüzyılda çok çıktık! Her katta
 		yeni bir şeyler buluyoruz. 
 		Her yeni katta doğanın kanunları ve mantık nedir bunları buluyoruz.
-		Yani şunu demek istiyorum. 
+			<br><br>Yani şunu demek istiyorum.
 		Matematik bir tanedir, iki tane matematik yoktur. Bir tane matematik vardır, biz de o 
 		matematiği buluyoruz. Uzaylılar olsa diyelim, onlar zeki yaratıklar
 		olsalar, orada matematik 
@@ -80,7 +80,8 @@ function clickSwapImg() {}
 		çünkü soyut bir şey olduğu için, 
 		insanın aklıyla yaptığı bir şey olduğu için, sanatla çok yakın ilişkisi 
 		var. Belki en yakın da müzikle 
-		ilişkisi var. Yalnız matematikçilerin bu konuda ufak bir şanssızlığı da
+		ilişkisi var.
+			<br><br>Yalnız matematikçilerin bu konuda ufak bir şanssızlığı da
 		var. Her insan bir tür 
 		müziği belli ölçüde sever, dinler. Daha ciddiye alıyorsa bir alet 
 		çalmasını öğrenir. Yahut kompozisyon 
@@ -92,9 +93,9 @@ function clickSwapImg() {}
 				text-decoration: none;
 			}
 		</style>
-			<a href="https://nesinkoyleri.org/"><span><b>
+			<a href="https://nesinkoyleri.org/"><span style="color: #b90e0e"><b>
 				*1- Nesin Matematik / Sanat / Felsefe Köyü Kurucusu ve Yöneticisi</b></span></a><br>
-			<a href="http://memoriam.metu.edu.tr/prof-dr-tosun-terzioglu/"><span><b>
+			<a href="http://memoriam.metu.edu.tr/prof-dr-tosun-terzioglu/"><span style="color: #b90e0e"><b>
 				*2- TÜBİTAK Eski Başkanı</b></span></a>
 			</font></i></p>
 		<p align="center">&nbsp;<p align="center">
