New features have been added

--- a/kmsl.htm
+++ b/kmsl.htm
@@ -58,7 +58,8 @@ function clickSwapImg() {}
 		fonksiyonun integralini alarak kolayca bulabiliyoruz. “0”dan x’e kadar 
 		olan kısmının alanı
 		(l/3)x</span><sup><span style="font-family: Times New Roman">3</span></sup><span style="font-family: Times New Roman"> 
-		yapmaktadır. Şimdi Prof. Ali Nesin’in örneğinde olduğu gibi uzayın 
+		yapmaktadır.
+			<br><br>Şimdi Prof. Ali Nesin’in örneğinde olduğu gibi uzayın
 		farklı bir 
 		yerindeki zeki yaratıkların da aynı alanı hesaplaması için bir metot 
 		geliştirdiklerini düşünelim. Onların da (1/3)x</span><sup><span style="font-family: Times New Roman">3</span></sup><font face="Times New Roman"> 
