Character bugs are fixed.

--- a/krl.htm
+++ b/krl.htm
@@ -47,7 +47,9 @@ function clickSwapImg() {}
 		bu hatıra defterini, matematiksel hatıra defterini, ölünceye kadar 
 		kullandı. Bu defter ancak o öldükten 43 
 		yıl sonra ortaya çıktı ve içinde 146 tane, basılmamış, küçük küçük çok 
-		önemli teorem bulundu. Bütün hayatı 
+		önemli teorem bulundu.
+
+			<br><br>Bütün hayatı
 		boyunca &quot;öz ama olgun&quot; ilkesiyle hareket etti ve çok az yayın yaptı, ama
 		her yaptığı yayın, her 
 		bulduğu buluş tam, olgun ve mükemmeldi. Çalışmalarını sade bir odada gerçekleştirdi; çıplak bir 
