New features have been added

--- a/ict.htm
+++ b/ict.htm
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="Content-Language" content="tr">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
-<title>Ana Sayfa</title>
+<title>Matematiğin Aydınlık Dünyası</title>
 <script language="JavaScript" fptype="dynamicanimation">
 <!--
 function dynAnimation() {}
