New features have been added. Box are fixed. Ready to deploy

--- a/1.htm
+++ b/1.htm
@@ -33,7 +33,7 @@ function clickSwapImg() {}
 		text-decoration: none;
 	}
 </style>
-<table border="0" width="900" id="table1" bgcolor="#FFFFCC" style="border-collapse: collapse">
+<table border="0" width="1280" id="table1" bgcolor="#FFFFCC" style="border-collapse: collapse">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
@@ -47,29 +47,29 @@ function clickSwapImg() {}
 <a title="a line joing two points" style="color: #0000FF; text-decoration: none; text-underline: none; text-line-through: none" href="http://www.mathopenref.com/linesegment.html">
 line segment</a><font color="#0000FF"> using only a compass and straight edge.</font></span></p>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
-<table border="0" width="900" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
+<table border="0" width="1280" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
 	<tr>
 		<td align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="0.htm"><span style="text-decoration: none">Home</span></a></b></p>
 		</td>
-		<td align="center" width="110">
+		<td align="center" >
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="1.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Copying a line segment</span></a></b></td>
-		<td align="center" width="273">
+		<td align="center" >
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="2.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
-		<span style="text-decoration: none">Constructing a perpendicular bisector of a line segment 
+		<span style="text-decoration: none">Constructing a perpendicular bisector of a line segment
 		</span></a></b> </td>
-		<td align="center" width="264">
+		<td align="center" >
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="3.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Constructing a perpendicular at the endpoint of a ray</span></a></b></td>
-		<td align="center" width="107">
+		<td align="center" >
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="4.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
@@ -77,7 +77,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		</b> </td>
 	</tr>
 	</table>
-<table border="0" width="901" id="table3" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
+<table border="0" width="1280" id="table3" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
 	<tr>
 		<td align="center" valign="top">
 		<p style="margin-top: 6px; margin-bottom: 12px">
@@ -85,25 +85,25 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 		<a href="5.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Constructing a 60° angle </span></a>
 		</b> </td>
-		<td align="center" width="181" valign="top">
+		<td align="center"  valign="top">
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="6.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Constructing an Equilateral Triangle&nbsp;
 		</span></a></b> </td>
-		<td align="center" width="152" valign="top">
+		<td align="center"  valign="top">
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="7.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Finding the center of a circle</span></a></b></td>
-		<td align="center" width="174" valign="top">
+		<td align="center"  valign="top">
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="8.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
 		<span style="text-decoration: none">Circumcenter of a triangle </span>
 		</a><font color="#CC0000"> <br>
 &nbsp;</font></b></td>
-		<td align="center" width="245" valign="top">
+		<td align="center"  valign="top">
 		<p style="margin-top: 6px; margin-bottom: 12px">
 		<b>
 		<a href="9.htm" dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2">
@@ -112,7 +112,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 	</tr>
 	</table>
 <p style="margin-top: 6px; margin-bottom: 12px">
-<APPLET CODE="GSP.class"  ARCHIVE="jsp4.jar" CODEBASE="jsp" WIDTH=905 HEIGHT=597 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
+<APPLET CODE="GSP.class"  ARCHIVE="jsp5.jar" CODEBASE="jsp" WIDTH=905 HEIGHT=597 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
 <PARAM NAME=BackRed VALUE=255>
 <PARAM NAME=BackGreen VALUE=255>
 <PARAM NAME=BackBlue VALUE=255>
@@ -133,7 +133,7 @@ line segment</a><font color="#0000FF"> using only a compass and straight edge.</
 {14} ShowButton(11,47,'3.Step: Check the measuraments')(13,12)[black];
 ">
 Sorry, this page requires a Java-compatible web browser.</APPLET></p>
-<table border="0" width="900" id="table4" cellpadding="4" bgcolor="#FFFFCC">
+<table border="0" width="1280" id="table4" cellpadding="4" bgcolor="#FFFFCC">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
@@ -150,7 +150,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
-  font-family:Arial">Mark a point R that will be one endpoint of the new line 
+  font-family:Arial">Mark a point R that will be one endpoint of the new line
 		segment.</span></font></td>
 	</tr>
 	<tr>
@@ -161,7 +161,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
-  font-family:Arial">Set the compass point on the point P of the line segment to 
+  font-family:Arial">Set the compass point on the point P of the line segment to
 		be copied.</span></font></td>
 	</tr>
 	<tr>
@@ -172,7 +172,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
-  font-family:Arial">Adjust the compass width to the point Q. The compass width 
+  font-family:Arial">Adjust the compass width to the point Q. The compass width
 		is now equal to the length of the line segment PQ.</span></font></td>
 	</tr>
 	<tr>
@@ -183,7 +183,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
-  font-family:Arial">Without changing the compass width, place the compass point 
+  font-family:Arial">Without changing the compass width, place the compass point
 		on the the point R on the line you drew in step 1</span></font></td>
 	</tr>
 	<tr>
@@ -194,7 +194,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
-  font-family:Arial">Without changing the compass width, Draw an arc roughly 
+  font-family:Arial">Without changing the compass width, Draw an arc roughly
 		where the other endpoint will be.</span></font></td>
 	</tr>
 	<tr>
@@ -205,7 +205,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height:12.75pt; margin-top:6px; margin-bottom:12px"><font color="#0000FF">
 		<span style="font-size:10.0pt;
-  font-family:Arial">Pick a point on the circle that will be the other endpoint 
+  font-family:Arial">Pick a point on the circle that will be the other endpoint
 		of the new line segment.</span></font></td>
 	</tr>
 	<tr>
