--- a/0.htm
+++ b/0.htm
@@ -34,7 +34,7 @@ function clickSwapImg() {}
 		text-decoration: none;
 	}
 </style>
-<table border="0" width="900" id="table1" bgcolor="#FFFFCC" style="border-collapse: collapse">
+<table border="0" width="1280" id="table1" bgcolor="#FFFFCC" style="border-collapse: collapse">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
@@ -45,55 +45,55 @@ function clickSwapImg() {}
 <p style="margin-top: 6px; margin-bottom: 12px" align="left">
 <font color="#0000FF"><b>Doing geometry is learning geometry.</b></font></p>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
-<table border="0" width="900" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
+<table border="0" width="1280" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
 	<tr>
 		<td align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="index.htm"><span style="text-decoration: none">Home</span></a></b></p>
 		</td>
-		<td align="center" width="110">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="1.htm"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
 		</td>
-		<td align="center" width="273">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="2.htm"><span style="text-decoration: none">Constructing a perpendicular bisector of a line segment 
+		<b><a href="2.htm"><span style="text-decoration: none">Constructing a perpendicular bisector of a line segment
 		</span></a></b></p>
 		</td>
-		<td align="center" width="264">
+		<td align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="3.htm"><span style="text-decoration: none">Constructing a perpendicular at the endpoint of a ray</span></a></b></p>
 		</td>
-		<td align="center" width="107">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30° angle 
+		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30° angle
 		</span></a></b></p>
 		</td>
 	</tr>
 	</table>
-<table border="0" width="901" id="table3" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
+<table border="0" width="1280" id="table3" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
 	<tr>
 		<td align="center" valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60° angle 
+		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60° angle
 		</span></a></b></p>
 		</td>
-		<td align="center" width="175" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="6.htm"><span style="text-decoration: none">Constructing an Equilateral Triangle&nbsp; 
+		<b><a href="6.htm"><span style="text-decoration: none">Constructing an Equilateral Triangle&nbsp;
 		</span></a></b></p>
 		</td>
-		<td align="center" width="151" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="7.htm"><span style="text-decoration: none">Finding the center of a circle</span></a></b></p>
 		</td>
-		<td align="center" width="179" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
-		<b><a href="8.htm"><span style="text-decoration: none">Circumcenter of a triangle 
+		<b><a href="8.htm"><span style="text-decoration: none">Circumcenter of a triangle
 		</span></a> <br>
 &nbsp;</b></p>
 		</td>
-		<td align="center" width="245" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="9.htm"><span style="text-decoration: none">Tangents through an external point - Construction
 		</span></a></b></p>
@@ -101,37 +101,37 @@ function clickSwapImg() {}
 	</tr>
 	</table>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
-<table border="0" width="900" id="table6">
+<table border="0" width="1280" id="table6">
 	<tr>
 		<td>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-Nowadays, Turkish Education System is moving in new directions. Now, in many 
-classrooms, it is rare for a lesson to be taught to rows of children studiously 
-bent over worksheets, practicing computations, rules, and formulas. Instead, it 
+Nowadays, Turkish Education System is moving in new directions. Now, in many
+classrooms, it is rare for a lesson to be taught to rows of children studiously
+bent over worksheets, practicing computations, rules, and formulas. Instead, it
 is more common (I think it will more common) to observe</span><span lang="EN-US">
-<span style="color:blue">children engaging in a whole-class discussion about 
-what they have discovered, what has been learned. In other words, they construct 
-their own knowledge. Namely, they do geometry instead of dealing with only rules 
-and formulas. They are actively involved in a wide variety of physical and 
-mental actions such as exploring, investigating, patterning, modeling, and 
+<span style="color:blue">children engaging in a whole-class discussion about
+what they have discovered, what has been learned. In other words, they construct
+their own knowledge. Namely, they do geometry instead of dealing with only rules
+and formulas. They are actively involved in a wide variety of physical and
+mental actions such as exploring, investigating, patterning, modeling, and
 verifying.</span></span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-I designed this site to help students for a much greater depth of understanding 
-of constructions. They will get idea about constructing geometry by using only a 
+I designed this site to help students for a much greater depth of understanding
+of constructions. They will get idea about constructing geometry by using only a
 compass and straight edge.</span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-Constructions: The drawing of various shapes using only a compass a 
-straightedge. No measurement of lengths or angles is allowed. The word 
-construction in geometry has a very specific meaning: the drawing of geometric 
-items such as lines and circles using only a compass and straightedge. Very 
-importantly, you are not allowed to measure angles with a protractor or measure 
+Constructions: The drawing of various shapes using only a compass a
+straightedge. No measurement of lengths or angles is allowed. The word
+construction in geometry has a very specific meaning: the drawing of geometric
+items such as lines and circles using only a compass and straightedge. Very
+importantly, you are not allowed to measure angles with a protractor or measure
 lengths with a ruler. </span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
-Java will facilitate their learning process and they will learn more about the 
+Java will facilitate their learning process and they will learn more about the
 constructions by following the Step-by-step Instructions.</span></p>
 <p style="margin-top:6.0pt;margin-right:0cm;margin-bottom:12.0pt;margin-left:
 0cm;text-align:justify;line-height:200%"><span lang="EN-US" style="color: blue">
@@ -141,20 +141,20 @@ The example shown below may give some idea about what I mean.
 </table>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
 
-<table border="0" width="900" id="table5" bgcolor="#FFFFCC" style="border-collapse: collapse">
+<table border="0" width="1280" id="table5" bgcolor="#FFFFCC" style="border-collapse: collapse">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
-		<font size="4" color="#000099"><b>Constructing a Perpendicular from an 
+		<font size="4" color="#000099"><b>Constructing a Perpendicular from an
 		External Point </b></font></td>
 	</tr>
 </table>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
-<p style="margin-top: 6px; margin-bottom: 12px"><font color="#0000FF"><b>This 
-demonstration shows how to draw a perpendicular to a line through an external 
+<p style="margin-top: 6px; margin-bottom: 12px"><font color="#0000FF"><b>This
+demonstration shows how to draw a perpendicular to a line through an external
 point using only a compass and straight edge.</b></font></p>
 <p style="margin-top: 6px; margin-bottom: 12px">
-<APPLET CODE="GSP.class"  ARCHIVE="jsp4.jar" CODEBASE="jsp" WIDTH=905 HEIGHT=648 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
+<APPLET CODE="GSP.class"  ARCHIVE="jsp5.jar" CODEBASE="jsp" WIDTH=905 HEIGHT=648 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
 <PARAM NAME=BackRed VALUE=255>
 <PARAM NAME=BackGreen VALUE=255>
 <PARAM NAME=BackBlue VALUE=255>
@@ -181,7 +181,7 @@ point using only a compass and straight edge.</b></font></p>
 {20} ShowButton(10,29,'Draw two circles with same radius at intersection points')(14,13,15)[black];
 ">
 Sorry, this page requires a Java-compatible web browser.</APPLET></p>
-<table border="0" width="900" id="table4" cellpadding="4" bgcolor="#FFFFCC">
+<table border="0" width="1280" id="table4" cellpadding="4" bgcolor="#FFFFCC">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
@@ -199,7 +199,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
-		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Place 
+		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Place
 		the compass on the given external point R.</span></font></td>
 	</tr>
 	<tr>
@@ -211,8 +211,8 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
-		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Set the 
-		compass width to a approximately 50% more than the distance to the line. 
+		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Set the
+		compass width to a approximately 50% more than the distance to the line.
 		The actual width does not matter.</span></font></td>
 	</tr>
 	<tr>
@@ -224,8 +224,8 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
-		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Draw an 
-		arc across the line on each side of R, making sure not to adjust the 
+		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Draw an
+		arc across the line on each side of R, making sure not to adjust the
 		compass width in between.</span></font></td>
 	</tr>
 	<tr>
@@ -237,7 +237,7 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
-		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">At this 
+		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">At this
 		point, you can adjust the compass width. Recommended: leave it as is.<br>
 		From each point P,Q, draw circles so that the they cross.</span></font></td>
 	</tr>
@@ -250,8 +250,8 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
-		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Align a 
-		straightedge between R and the point where the circles intersect. Draw the 
+		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Align a
+		straightedge between R and the point where the circles intersect. Draw the
 		perpendicular line from R to the line, or beyond if you wish.</span></font></td>
 	</tr>
 	<tr>
@@ -263,13 +263,13 @@ Sorry, this page requires a Java-compatible web browser.</APPLET></p>
 		<td style="padding:.75pt .75pt .75pt .75pt">
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
-		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Done. 
-		This line is perpendicular to the first line and passes through the 
+		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">Done.
+		This line is perpendicular to the first line and passes through the
 		point R</span></font></td>
 	</tr>
 </table>
 <p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
-<table border="0" width="900" id="table8">
+<table border="0" width="1280" id="table8">
 	<tr>
 		<td><i><font size="2" color="#0000FF">This site designed by <b>Mustafa 
 		Ali Çetinkaya</b></font></i></td>
