--- a/2.htm
+++ b/2.htm
@@ -29,7 +29,7 @@ function clickSwapImg() {}
 		text-decoration: none;
 	}
 </style>
-<table border="0" width="900" id="table1" bgcolor="#FFFFCC" style="border-collapse: collapse">
+<table border="0" width="1280" id="table1" bgcolor="#FFFFCC" style="border-collapse: collapse">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
@@ -42,55 +42,55 @@ function clickSwapImg() {}
 demonstration shows how to draw a perpendicular bisector of a line segment, 
 using only a compass and straight edge.</b></font></p>
 <p style="margin-top: 6px; margin-bottom: 12px">&nbsp;</p>
-<table border="0" width="900" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
+<table border="0" width="1280" id="table2" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
 	<tr>
 		<td align="center">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="0.htm"><span style="text-decoration: none">Home</span></a></b></p>
 		</td>
-		<td align="center" width="110">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="1.htm"><span style="text-decoration: none">Copying a line segment</span></a></b></p>
 		</td>
-		<td align="center" width="273">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="2.htm"><span style="text-decoration: none">Constructing a perpendicular bisector of a line segment 
 		</span></a></b></p>
 		</td>
-		<td align="center" width="264">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="3.htm"><span style="text-decoration: none">Constructing a perpendicular at the endpoint of a ray</span></a></b></p>
 		</td>
-		<td align="center" width="107">
+		<td align="center" >
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="4.htm"><span style="text-decoration: none">Constructing a 30° angle 
 		</span></a></b></p>
 		</td>
 	</tr>
 	</table>
-<table border="0" width="901" id="table3" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
+<table border="0" width="1280" id="table3" cellpadding="4" bgcolor="#FFFFCC" bordercolor="#3399FF">
 	<tr>
 		<td align="center" valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="5.htm"><span style="text-decoration: none">Constructing a 60° angle 
 		</span></a></b></p>
 		</td>
-		<td align="center" width="175" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="6.htm"><span style="text-decoration: none">Constructing an Equilateral Triangle&nbsp; 
 		</span></a></b></p>
 		</td>
-		<td align="center" width="151" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="7.htm"><span style="text-decoration: none">Finding the center of a circle</span></a></b></p>
 		</td>
-		<td align="center" width="179" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="8.htm"><span style="text-decoration: none">Circumcenter of a triangle 
 		</span></a> <br>
 &nbsp;</b></p>
 		</td>
-		<td align="center" width="245" valign="top">
+		<td align="center"  valign="top">
 		<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="font-variant: small-caps" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2" style="margin-top: 6px; margin-bottom: 12px">
 		<b><a href="9.htm"><span style="text-decoration: none">Tangents through an external point - Construction
 		</span></a></b></p>
@@ -98,7 +98,7 @@ using only a compass and straight edge.</b></font></p>
 	</tr>
 	</table>
 <p style="margin-top: 6px; margin-bottom: 12px">
-<APPLET CODE="GSP.class"  ARCHIVE="jsp4.jar" CODEBASE="jsp" WIDTH=904 HEIGHT=674 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
+<APPLET CODE="GSP.class"  ARCHIVE="jsp5.jar" CODEBASE="jsp" WIDTH=904 HEIGHT=674 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
 <PARAM NAME=BackRed VALUE=255>
 <PARAM NAME=BackGreen VALUE=255>
 <PARAM NAME=BackBlue VALUE=255>
@@ -119,7 +119,7 @@ using only a compass and straight edge.</b></font></p>
 {14} ShowButton(10,49,'The line segment that passess through the intersection points of circles is ''''Perpendicular Bisector''''')(10,11,9,8)[black];
 ">
 Sorry, this page requires a Java-compatible web browser.</APPLET></p>
-<table border="0" width="900" id="table4" cellpadding="4" bgcolor="#FFFFCC">
+<table border="0" width="1280" id="table4" cellpadding="4" bgcolor="#FFFFCC">
 	<tr>
 		<td align="center">
 		<p style="margin-top: 6px; margin-bottom: 12px">
