--- a/4.htm
+++ b/4.htm
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<meta name=viewport content="width=device-width,initial-scale=1">
+	<meta charset="utf-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
@@ -102,32 +104,17 @@ straightedge. </b></font></p>
 		</td>
 	</tr>
 	</table>
-<p style="margin-top: 6px; margin-bottom: 12px">
-<APPLET CODE="GSP.class"  ARCHIVE="jsp5.jar" CODEBASE="jsp" WIDTH=907 HEIGHT=631 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
-<PARAM NAME=BackRed VALUE=255>
-<PARAM NAME=BackGreen VALUE=255>
-<PARAM NAME=BackBlue VALUE=255>
-<PARAM NAME=Construction VALUE="
-{1} Point(271,309)[label('A'),hidden];
-{2} Point(638,309)[label('D'),hidden];
-{3} Segment(2,1)[color(0,0,128),hidden];
-{4} Point on object(3,0.40327)[label('B'),red,hidden];
-{5} Circle(1,4)[color(0,128,0),hidden];
-{6} Distance(4,1,14,19,'')[hidden];
-{7} Circle by radius(4,6)[color(0,128,0),hidden];
-{8} Intersect2(7,5)[label('E'),red,hidden];
-{9} Circle by radius(8,6)[color(0,128,0),hidden];
-{10} Intersect1(9,7)[label('C'),red,hidden];
-{11} Segment(10,1)[color(0,0,128),hidden];
-{12} Angle(10,1,4,249,323,'')[hidden];
-{13} ShowButton(10,5,'1.Step')(3,1,2)[black];
-{14} ShowButton(10,26,'2.Step')(5,4)[black];
-{15} ShowButton(10,47,'3.Step')(7,8)[black];
-{16} ShowButton(10,68,'4.Step')(9,10)[black];
-{17} Angle(10,1,4,299,306,'')[hidden];
-{18} ShowButton(10,89,'5.Step')(17,11)[black];
-">
-Sorry, this page requires a Java-compatible web browser.</APPLET></p>
+<br><br>
+<script src="https://www.geogebra.org/apps/deployggb.js"></script>
+<div id="ggb-element"></div>
+<script>
+	var params = {"appName": "geometry", "width": 800, "height": 600, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true };
+	var applet = new GGBApplet(params, true);
+	window.addEventListener("load", function() {
+		applet.inject('ggb-element');
+	});
+</script>
+<br><br>
 <table border="0" width="1280" id="table4" cellpadding="4" bgcolor="#FFFFCC">
 	<tr>
 		<td align="center">
