--- a/8.htm
+++ b/8.htm
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<meta name=viewport content="width=device-width,initial-scale=1">
+	<meta charset="utf-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
@@ -101,51 +103,17 @@ construct the circumcenter of a triangle using only a compass and straightedge.<
 		</td>
 	</tr>
 	</table>
-<p style="margin-top: 6px; margin-bottom: 12px">
-<APPLET CODE="GSP.class"  ARCHIVE="jsp5.jar" CODEBASE="jsp" WIDTH=906 HEIGHT=646 ALIGN=CENTER><PARAM NAME=MeasureInDegrees VALUE=1><PARAM NAME=DirectedAngles VALUE=0>
-<PARAM NAME=BackRed VALUE=255>
-<PARAM NAME=BackGreen VALUE=255>
-<PARAM NAME=BackBlue VALUE=255>
-<PARAM NAME=Construction VALUE="
-{1} Point(524,269)[label('A')];
-{2} Point(367,357)[label('B')];
-{3} Segment(2,1)[color(0,0,128)];
-{4} Point(639,359)[label('C')];
-{5} Segment(4,1)[color(0,0,128)];
-{6} Segment(2,4)[color(0,0,128)];
-{7} Point on object(3,0.338253)[hidden];
-{8} Circle(2,7)[color(0,128,0),hidden];
-{9} Distance(7,2,14,19,'')[hidden];
-{10} Circle by radius(1,9)[color(0,128,0),hidden];
-{11} Intersect2(10,8)[hidden];
-{12} Intersect1(10,8)[hidden];
-{13} Ray(12,11)[hidden];
-{14} Point on object(13,1.61925)[hidden];
-{15} Point(428,269)[hidden];
-{16} Circle(1,15)[color(255,128,0),hidden];
-{17} Intersect2(5,16)[hidden];
-{18} Distance(17,1,14,39,'')[hidden];
-{19} Circle by radius(4,18)[color(255,128,0),hidden];
-{20} Intersect2(19,16)[hidden];
-{21} Intersect2(5,10)[hidden];
-{22} Intersect1(19,16)[hidden];
-{23} Ray(22,20)[hidden];
-{24} Point on object(23,1.23119)[hidden];
-{25} Segment(14,11)[hidden];
-{26} Intersect(25,3)[red,hidden];
-{27} ShowButton(10,8,'Find perpendicular bisector of |AB| by using circles')(11,8,10,13,26,12)[black];
-{28} Segment(24,20)[hidden];
-{29} Intersect(28,25)[label('circumcenter'),red];
-{30} Circle(29,4)[green,thick];
-{31} Point on object(30,1.46727)[red];
-{32} Segment(31,29)[green,thick];
-{33} Intersect(28,5)[red,hidden];
-{34} ShowButton(10,29,'Find perpendicular bisector of |AB| by using circles')(16,19,20,23,33,22)[black];
-{35} Intersect(23,13)[hidden];
-{36} Circle(35,2)[hidden];
-{37} ShowButton(10,50,'Determine circumcenter and construct circumcircle of the triangle')(36,35)[black];
-">
-Sorry, this page requires a Java-compatible web browser.</APPLET></p>
+<br><br>
+<script src="https://www.geogebra.org/apps/deployggb.js"></script>
+<div id="ggb-element"></div>
+<script>
+	var params = {"appName": "geometry", "width": 800, "height": 600, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true };
+	var applet = new GGBApplet(params, true);
+	window.addEventListener("load", function() {
+		applet.inject('ggb-element');
+	});
+</script>
+<br><br>
 <table border="0" width="1280" id="table4" cellpadding="4" bgcolor="#FFFFCC">
 	<tr>
 		<td align="center">
