Awesome features have been added. Bugs are fixed. Ready to deploy

--- a/0.htm
+++ b/0.htm
@@ -222,8 +222,7 @@ point using only a compass and straight edge.</b></font></p>
 		<p class="MsoNormal" style="line-height: 12.75pt; margin-top: 6px; margin-bottom: 12px">
 		<font color="#0000FF">
 		<span lang="EN-US" style="font-size: 10.0pt; font-family: Arial">At this
-		point, you can adjust the compass width. Recommended: leave it as is.<br>
-		From each point P,Q, draw circles so that the they cross.</span></font></td>
+		point, you can adjust the compass width. Recommended: leave it as is. From each point P,Q, draw circles so that the they cross.</span></font></td>
 	</tr>
 	<tr>
 		<td valign="top" style="padding:.75pt .75pt .75pt .75pt">
